# server/src/request/request.service.ts
@@ -18,6 +18,7 @@ export class RequestService {
     purpose: true,
     requestMode: true,
     residentId: true,
+    rejectionReason: true,
     resident: {
       select: {
         id: true,
@@ -69,7 +70,7 @@ export class RequestService {
           payload.status,
         );
         // Send sms to one resident regarding for his or her request status
-        await this.twilioService.sendSms(contact, body);
+        // await this.twilioService.sendSms(contact, body);
         // Create the notification send to the resident as a history
         await this.notificationService.create({
           message: body,
